--- a/GharPoch/src/pages/shop/shop.scss
+++ b/GharPoch/src/pages/shop/shop.scss
@@ -104,5 +104,12 @@ page-shop {
 			}
 		}
 	}
+
+	#notifications-badge {
+            position: absolute;
+            top: 2px;
+            right: 2px;
+            border-radius: 50%;
+        }
 	
 }
