Add to cart functionality

--- a/GharPoch/src/app/app.scss
+++ b/GharPoch/src/app/app.scss
@@ -148,6 +148,10 @@ ion-footer{
 	min-width: 20px;
 	color: #fff;
 	z-index: 9999;
+
+}
+.back-button.show-back-button{
+		margin-left:-7px;
 }
 
 .back-button-icon-ios{
