--- a/GharPoch/src/pages/shop/shop.scss
+++ b/GharPoch/src/pages/shop/shop.scss
@@ -10,7 +10,7 @@ page-shop {
 			right:0;
 			width:90%;
 			margin:0 auto;
-			box-shadow: 0px -6px 25px #797979;
+			box-shadow:0px 2px 5px #797979;
 			img{
 				width:100%;
 				display: block;
@@ -31,7 +31,7 @@ page-shop {
 				bottom:-85px;
 			}
 			@media(max-width:400px){
-				bottom:-60px;
+				bottom:-77px;
 			}
 			@media(max-width:340px){
 				bottom:-40px;
@@ -66,14 +66,22 @@ page-shop {
 			}
 			.cat_list{
 				margin-bottom: 140px;
+				ion-row{
+					&:last-child{
+							margin-bottom:20px;
+						}
+				}
 				ion-col{
-					position:relative;
-					padding-top:50px;
-					box-shadow: 0 0 25px #ababab;
-					margin-bottom:20px;
+					position:relative;					
+					margin-bottom:5px;
+
 				}
 				a{
 					text-decoration:none;
+					padding-top:30px;
+					box-shadow:0 0 11px #ababab;
+					display:block;
+					overflow:hidden;
 					p{
 						color:#6f6f6f; 
 						font-family: 'BrandonGrotesque-Medium';  
