Order app UI changes

--- a/GharPoch/src/pages/all-product/all-product.scss
+++ b/GharPoch/src/pages/all-product/all-product.scss
@@ -123,4 +123,7 @@ page-all-product {
             right: 2px;
             border-radius: 50%;
         }
+		form.ng-untouched.ng-pristine.ng-valid {
+			text-align: center !important;
+		}
 }
