--- a/GharPoch/src/pages/cart/cart.scss
+++ b/GharPoch/src/pages/cart/cart.scss
@@ -103,6 +103,10 @@ page-cart {
 				
 			}
 		}
+
+		.text-input-md {
+    		margin: 15px 0px;
+		}
         #notifications-badge {
             position: absolute;
             top: 2px;
