--- a/GharPoch/src/pages/shop/shop.scss
+++ b/GharPoch/src/pages/shop/shop.scss
@@ -59,10 +59,11 @@ page-shop {
 			}
 			h2{
 				font-family: 'BrandonGrotesque-Medium';  
-				font-size:23px; 
-				padding-bottom:20px; 
+				font-size:18px; 
+				padding-bottom:5px; 
 				color:#6f6f6f;
 				margin-bottom:0;
+				//margin-top: 0;
 			}
 			.cat_list{
 				margin-bottom: 140px;
@@ -95,7 +96,7 @@ page-shop {
 							font-size:14px;
 						}
 						&:after{
-							content: '';  display:block;  margin:10px auto; height:7px; width:50px; background: rgba(114,170,25,1); 
+							content: '';  display:block;  margin:10px auto; height:4px; width:50px; background: rgba(114,170,25,1); 
 							background: -moz-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
 							background: -webkit-gradient(left top, right top, color-stop(0%, rgba(114,170,25,1)), color-stop(19%, rgba(125,174,26,1)), color-stop(34%, rgba(131,173,26,1)), color-stop(68%, rgba(160,190,28,1)), color-stop(100%, rgba(177,196,30,1)));
 							background: -webkit-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
