--- a/GharPoch/src/pages/cart-items/cart-items.scss
+++ b/GharPoch/src/pages/cart-items/cart-items.scss
@@ -6,5 +6,228 @@ page-cart-items {
         border-color: #e0e0e0;
         color: #999;
     }
+
+    .cart_page{
+	overflow-y:scroll;
+	overflow-x:hidden;
+	.timeslots{
+		border: 1px solid #a4bf1d;
+		overflow:hidden;
+		margin:10px;
+		padding:5px !important;
+		font-size:14px;
+		color:#6f6f6f;
+		font-family: 'Lato-Bold';
+		font-family: 'BrandonGrotesque-Bold'; 
+		@media(max-width:420px){
+			font-size:10px;
+		}
+		span{
+		       float: left;
+  			  padding-top: 15px;
+  			  	@media(max-width:420px){
+  			  	    padding-top: 10px;
+  			  	}
+		}
+		.cart-truck{
+			    display: inline-block;
+			    width: 50px;
+			    margin-top: -8px;
+			    margin-left: 10px;
+			    @media(max-width:420px){
+			    		width: 40px;
+			    		    margin-left: 0;
+			    }
+			    @media(max-width:350px){
+			    	    width: 25px;
+   						 margin-left: 5px;
+			    }
+		}
+		button{
+		padding:10px 0;
+		margin-left:10px;
+		font-size:14px;
+		font-family: 'BrandonGrotesque-Bold'; 
+		width:75px;
+		    vertical-align: middle;
+		color:#fff;
+			background: rgba(114,170,25,1);
+		background: -moz-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
+		background: -webkit-gradient(left top, right top, color-stop(0%, rgba(114,170,25,1)), color-stop(19%, rgba(125,174,26,1)), color-stop(34%, rgba(131,173,26,1)), color-stop(68%, rgba(160,190,28,1)), color-stop(100%, rgba(177,196,30,1)));
+		background: -webkit-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
+		background: -o-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
+		background: -ms-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
+		background: linear-gradient(to right, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#72aa19', endColorstr='#b1c41e', GradientType=1 );
+			@media(max-width:420px){
+				font-size:10px;
+				width:60px;
+				    padding: 5px 0;
+			}
+		}
+	}
+	a{
+	text-decoration:none;
+	}
+	.cat_list{
+		.product-img{
+			border:1px solid  #a4bf1d;
+		}
+		.cat-inner-list{
+			background:#fff;
+			padding:10px;
+			box-sizing:border-box;
+			box-shadow:0px 2px 5px #797979;
+			margin-bottom:10px;
+		}
+		.cart-product-title{
+			font-size:18px;
+			margin-top:0;
+			color:#6f6f6f;
+			padding-bottom:5px;
+			text-decoration:none;
+			border-bottom:1px solid  #a4bf1d;
+			font-family: 'BrandonGrotesque-Medium';
+			margin-bottom:5px;
+			letter-spacing:1px;
+			@media(max-width:420px){
+				font-size:16px;
+			}
+			span{
+				font-family: 'Lato-Bold';
+				color:#6f6f6f;
+				font-size:15px;
+				letter-spacing:1px;
+				@media(max-width:420px){
+					font-size:14px;
+				}
+			}
+
+		}
+		.cart-details {
+			 ion-col{
+				padding:0 !important;
+			}
+		}
+		.product-price{
+			font-size:18px;
+			color:#6f6f6f;
+			font-family: 'BrandonGrotesque-Medium';
+			letter-spacing:1px;
+			@media(max-width:420px){
+				font-size:16px;
+			}
+		}
+		.cart-quantity{
+			padding:0;
+			p{
+				font-family: 'Lato-Bold';
+				color:#6f6f6f;
+				font-size:15px;
+				margin:0;
+				letter-spacing:1px;
+				@media(max-width:420px){
+					font-size:13px;
+				}
+			}
+		}
+		.remove-product{
+			font-family: 'Lato-Regular';
+				color:#6f6f6f;
+				font-size:14px;
+				display:block;
+				margin-top:10px;
+				span{
+					color: #a4bf1d;
+				}
+		}
+	}
+	.recomendation{
+		height:auto;
+		h2{
+			font-family: 'BrandonGrotesque-Medium';
+			color:#6f6f6f;
+			font-size:22px;
+			letter-spacing:1px;
+			text-align:center;
+			line-height: 22px;
+			width: 100%;
+		}
+		
+		.cart-slider{
+			ion-slide{
+				.slide-zoom{
+					padding:10px;
+					box-shadow:2px 2px 5px #797979;
+					position:relative;
+					box-sizing:border-box;
+					p{
+						position:absolute;
+						top: -15px;
+						right: -15px;
+						margin: 0;
+					}
+				}
+			}
+		}
+	}
+	
+	.cart-form-details{
+		margin-top: 30px;
+			label{
+				width:100%;
+				font-family: 'Lato-Regular';
+				color:#6f6f6f;
+				font-size:18px;
+				letter-spacing:1px;
+				margin-bottom:5px;
+				padding-left:20px;
+			}
+			input{
+				font-family: 'Lato-Regular';
+				color:#6f6f6f;
+				font-size:14px;
+				border:0;
+				border-bottom:1px solid #98ba1c;
+				width:100%;
+				margin-left:20px;
+				margin-bottom:30px;
+				letter-spacing:1px;
+			}
+			.product-list-left, .product-list-right{
+				font-family: 'BrandonGrotesque-Medium';
+				color:#6f6f6f;
+				font-size:14px;
+				letter-spacing:1px;
+				//margin-bottom:10px;
+			}
+			.grand-total{
+				background:#6f6f6f;
+					.product-list-left, .product-list-right{
+							color:#fff;
+							margin-bottom:0px;
+							padding:2px 5px;
+							line-height:24px;
+					}
+			}
+			
+			
+	}
+}
+.verify-add{
+					width:100%;
+					color:#fff;
+					font-size:16px;
+					font-family: 'BrandonGrotesque-Bold';
+					padding:10px 0;
+					background: rgba(114,170,25,1);
+					background: -moz-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
+					background: -webkit-gradient(left top, right top, color-stop(0%, rgba(114,170,25,1)), color-stop(19%, rgba(125,174,26,1)), color-stop(34%, rgba(131,173,26,1)), color-stop(68%, rgba(160,190,28,1)), color-stop(100%, rgba(177,196,30,1)));
+					background: -webkit-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
+					background: -o-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
+					background: -ms-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
+					background: linear-gradient(to right, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
+					filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#72aa19', endColorstr='#b1c41e', GradientType=1 );
+			}
     
 }
