--- a/GharPoch/src/pages/shop/shop.scss
+++ b/GharPoch/src/pages/shop/shop.scss
@@ -115,10 +115,16 @@ page-shop {
 	}
 
 	#notifications-badge {
-            position: absolute;
-            top: 2px;
-            right: 2px;
-            border-radius: 50%;
-        }
+		position: absolute;
+		top: 2px;
+		right: 2px;
+		border-radius: 50%;
+	}
+	.express{
+	width: 30px;
+	}
+	.profbtn{
+		
+	}
 	
 }
