1st module complete

--- a/GharPoch/src/pages/checkout/checkout.scss
+++ b/GharPoch/src/pages/checkout/checkout.scss
@@ -44,6 +44,10 @@ page-checkout {
 			border:1px solid #a4bf1d;
 		}
 		.Tack-order{
+			margin-bottom: 0;
+			position: fixed;
+			bottom: 0;
+			border-radius: 0;
 			width:100%;
 			letter-spacing:1px;
 			font-family: 'BrandonGrotesque-Medium';
