--- a/GharPoch/src/pages/forgot-password/forgot-password.scss
+++ b/GharPoch/src/pages/forgot-password/forgot-password.scss
@@ -1,5 +1,6 @@
-/*Login page Styling*/
-page-login {
+page-forgot-password {
+    /*Login page Styling*/
+
 	.login_page{
 		background:url('../assets/images/green_bg.jpg') transparent;
 		    height: 100vh;
@@ -48,7 +49,7 @@ page-login {
                     font-size: 14px;
 			}
 			.new-pass{
-	            background:url('../assets/images/pass.png') transparent center left no-repeat;
+	            background:url('../assets/images/lock.png') transparent center left no-repeat;
 	            padding-left:40px;
 	            margin-bottom:10px; 
 	            padding: 5px 40px;
@@ -57,7 +58,7 @@ page-login {
                 font-size: 14px;
 			}
 			.confirm-pass{
-				background:url('../assets/images/pass.svg') transparent center left no-repeat;
+				background:url('../assets/images/lock.png') transparent center left no-repeat;
 				padding-left:40px;
 				    margin-bottom: 10px;
                 padding: 5px 40px;
@@ -66,7 +67,7 @@ page-login {
                     font-size: 14px;
 			}
 			.email-add{
-				background:url('../assets/images/email.svg') transparent center left no-repeat;
+				background:url('../assets/images/mail.png') transparent center left no-repeat;
 				padding-left:40px;
 				    margin-bottom: 10px;
                 padding: 5px 40px;
@@ -152,7 +153,7 @@ page-login {
 				padding-left:40px;
 			}
 			.login-pass{
-				background:url('../assets/images/lock.png') transparent center left no-repeat;
+				background:url('../assets/images/key.png') transparent center left no-repeat;
 				padding-left:40px;
 				    margin-bottom: 10px;
 				    background-size: 24px 26px;
@@ -269,15 +270,5 @@ page-login {
     }
     .list-ios > .item-block:first-child{ border-top:0;}
     .list-ios > .item-block:last-child, .list-ios > .item-wrapper:last-child .item-block{ border:0;}
-	.undr-line{
-		    text-decoration: underline;
-	}
-
-	body.keyboard-open .has-footer{	
-		bottom: 0;
-	}
-	body.keyboard-open .creat-account{	
-		bottom: 0;
-	}
     
 }
