--- a/GharPoch/src/app/app.scss
+++ b/GharPoch/src/app/app.scss
@@ -78,7 +78,9 @@ ion-footer{
 			padding-top:0;
 		}
 		@media(max-width:500px){
-			font-size:12px;
+			font-size:13px;
+			line-height:24px;
+			padding-top:3px;
 		}
 	}
 	button{
@@ -110,7 +112,7 @@ ion-footer{
 	color:#fff;		
 	font-family: 'BrandonGrotesque-Medium'; 
 	@media(max-width:500px){
-		font-size:17px;					
+		font-size:15px;					
 	}
 	span{
 		font-size: 16px; 
