--- a/GharPoch/src/pages/all-product/all-product.scss
+++ b/GharPoch/src/pages/all-product/all-product.scss
@@ -21,11 +21,16 @@ page-all-product {
 		width: 30px;
 	}
 
+
 	ion-segment-button.header-tab.segment-button{
 		color:#fff;
 		border-bottom: 1px solid #eee;
-		line-height: 1.5em;
-		height: 3em;
+		line-height:13px;
+		height: 3.5em;
+		 display: flex;
+   		 align-items: center;
+        justify-content: center;
+		min-height:3.5em;
 		overflow: hidden;
 		white-space: inherit;
 	}
@@ -43,7 +48,7 @@ page-all-product {
 			a{
 				text-decoration:none;
 				ion-col > span{
-					font-size:22px;
+					font-size:18px;
 				    display: inline-block;
 					width: 120px;
 					color:#333;
@@ -61,7 +66,7 @@ page-all-product {
 							height:1px;
 							background:#333;
 							position:absolute;
-							top:11px;
+							top:5px;
 							display:block;
 							right:0;
 						}
@@ -79,23 +84,29 @@ page-all-product {
 				}
 			}
 			p{
-				font-size:20px;
+				font-size:16px;
 				color:#333;
 				font-family: 'BrandonGrotesque-Medium'; 
 				border-bottom:1px solid #72aa19;
 				margin-bottom:0px;
 				margin-top:0;
+				padding-right:45px;
+				position:relative;
 					span{
+							position:absolute;
 							display:inline-block;
 							font-size:14px;
 							margin-top: 5px;
+							right: 0;
+    						bottom: 2px;
 					}
 					@media(max-width:400px){
-						font-size:17px;
+						font-size:14px;
 					}
 			}
 			.add-cart{
 				p{
+					padding-right:0px;
 					border-bottom: 0;
 					font-size: 12px;
 					color: #333;
@@ -110,7 +121,7 @@ page-all-product {
 				form{
 					input{
 						width:auto;
-						font-size: 18px;
+						font-size: 16px;
 						height: 30px;
 						color: #fff;
 						line-height: 26px;
@@ -188,4 +199,14 @@ page-all-product {
 			padding: 3px 39px;
 			background: linear-gradient(to top, #72aa19 0%, #7dae1a 19%, #83ad1a 34%, #a0be1c 68%, #b1c41e 100%);
 		}
+
+		.expbtn{
+			color: #777;
+		}
+		.quant{
+			color: #555;
+			margin: 10px;
+			font-size: 16px;
+		}
+		
 }
