--- a/GharPoch/src/pages/cart-items/cart-items.scss
+++ b/GharPoch/src/pages/cart-items/cart-items.scss
@@ -20,13 +20,13 @@ page-cart-items {
 		font-family: 'Lato-Bold';
 		font-family: 'BrandonGrotesque-Bold'; 
 		@media(max-width:420px){
-			font-size:10px;
+			font-size:13px;
 		}
 		span{
 		       float: left;
   			  padding-top: 15px;
   			  	@media(max-width:420px){
-  			  	    padding-top: 10px;
+  			  	    padding-top: 5px;
   			  	}
 		}
 		.cart-truck{
@@ -84,20 +84,25 @@ page-cart-items {
 			font-size:18px;
 			margin-top:0;
 			color:#6f6f6f;
+			padding-right:50px;
 			padding-bottom:5px;
 			text-decoration:none;
 			border-bottom:1px solid  #a4bf1d;
 			font-family: 'BrandonGrotesque-Medium';
 			margin-bottom:5px;
 			letter-spacing:1px;
+			position:relative;
 			@media(max-width:420px){
-				font-size:16px;
+				font-size:15px;
 			}
 			span{
 				font-family: 'Lato-Bold';
 				color:#6f6f6f;
 				font-size:15px;
 				letter-spacing:1px;
+				position:absolute;
+				bottom:0;
+				right:0;
 				@media(max-width:420px){
 					font-size:14px;
 				}
@@ -121,6 +126,7 @@ page-cart-items {
 		.cart-quantity{
 			padding:0;
 			p{
+				padding-right:0px;
 				font-family: 'Lato-Bold';
 				color:#6f6f6f;
 				font-size:15px;
@@ -173,7 +179,8 @@ page-cart-items {
 	}
 	
 	.cart-form-details{
-		margin-top: 30px;
+		margin: 5px 0 0;
+		    padding: 0 10px;
 			label{
 				width:100%;
 				font-family: 'Lato-Regular';
@@ -198,28 +205,35 @@ page-cart-items {
 				font-family: 'BrandonGrotesque-Medium';
 				color:#6f6f6f;
 				font-size:14px;
+				    padding: 0;
+				    display:inline-block;
+				        line-height: 18px;
 				letter-spacing:1px;
-				//margin-bottom:10px;
-			}
-			.grand-total{
-				background:#6f6f6f;
-					.product-list-left, .product-list-right{
-							color:#fff;
-							margin-bottom:0px;
-							padding:2px 5px;
-							line-height:24px;
-					}
-			}
+				margin-bottom:10px;
+			}	
 			
 			
 	}
+	
 }
-.verify-add{
+.grand-total{
+		background:#6f6f6f;padding:0px 15px;
+			.product-list-left, .product-list-right{
+					color:#fff;
+					margin-bottom:0px;
+					padding:5px;
+					line-height:24px;
+			}
+	}
+			.verify-add{
 					width:100%;
 					color:#fff;
 					font-size:16px;
 					font-family: 'BrandonGrotesque-Bold';
 					padding:10px 0;
+				
+			}
+			.toolbar-background{
 					background: rgba(114,170,25,1);
 					background: -moz-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
 					background: -webkit-gradient(left top, right top, color-stop(0%, rgba(114,170,25,1)), color-stop(19%, rgba(125,174,26,1)), color-stop(34%, rgba(131,173,26,1)), color-stop(68%, rgba(160,190,28,1)), color-stop(100%, rgba(177,196,30,1)));
@@ -229,5 +243,53 @@ page-cart-items {
 					background: linear-gradient(to right, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
 					filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#72aa19', endColorstr='#b1c41e', GradientType=1 );
 			}
-    
+    form{
+    	width:100%;
+		input{
+			width:auto;
+			font-size: 18px;
+			height: 30px;
+			color: #fff;
+			line-height: 26px;
+			width: 30px;
+			background: rgba(114,170,25,1);
+			background: -moz-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
+			background: -webkit-gradient(left top, right top, color-stop(0%, rgba(114,170,25,1)), color-stop(19%, rgba(125,174,26,1)), color-stop(34%, rgba(131,173,26,1)), color-stop(68%, rgba(160,190,28,1)), color-stop(100%, rgba(177,196,30,1)));
+			background: -webkit-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
+			background: -o-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
+			background: -ms-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
+			background: linear-gradient(to right, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#72aa19', endColorstr='#b1c41e', GradientType=1 );
+			border-radius:50%;
+			border:0;
+			box-shadow:0px 2px 4px #797979;
+			@media(max-width:420px){
+				height: 25px;
+				line-height: 25px;
+				width: 25px;
+			}
+		}	
+		input[type="text"]{
+			width:40px;
+			background:transparent;
+			border-radius:0;
+			color: #333;
+			text-align: center;
+			box-shadow:none;
+			margin:0 2%;
+			@media(max-width:360px){
+				width:25px;
+			}
+		}
+	}
+	.footer{
+		.toolbar {
+			padding:0;
+		}
+	}
+	.quant{
+		color: #555;
+		margin: 10px;
+		font-size: 16px;
+	}
 }
