--- a/GharPoch/src/pages/shop/shop.scss
+++ b/GharPoch/src/pages/shop/shop.scss
@@ -10,7 +10,7 @@ page-shop {
 			right:0;
 			width:90%;
 			margin:0 auto;
-			box-shadow:0px 2px 5px #797979;
+			box-shadow:0px -2px 32px #797979;
 			img{
 				width:100%;
 				display: block;
@@ -66,7 +66,7 @@ page-shop {
 				//margin-top: 0;
 			}
 			.cat_list{
-				margin-bottom: 140px;
+				margin-bottom: 160px;
 				ion-row{
 					&:last-child{
 							margin-bottom:20px;
@@ -79,8 +79,8 @@ page-shop {
 				}
 				a{
 					text-decoration:none;
-					padding-top:30px;
-					box-shadow:0 0 11px #ababab;
+					padding-top:20px;
+					box-shadow:0 0 11px rgba(171, 171, 171, .4);
 					display:block;
 					overflow:hidden;
 					p{
@@ -91,12 +91,12 @@ page-shop {
 						left:0;
 						right:0;
 						text-align:center;
-						top:0;
+						top: 0px;
 						@media(max-width:500px){
 							font-size:14px;
 						}
 						&:after{
-							content: '';  display:block;  margin:10px auto; height:4px; width:50px; background: rgba(114,170,25,1); 
+							content: '';  display:block;  margin:10px auto; height:3px; width:50px; background: rgba(114,170,25,1); 
 							background: -moz-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
 							background: -webkit-gradient(left top, right top, color-stop(0%, rgba(114,170,25,1)), color-stop(19%, rgba(125,174,26,1)), color-stop(34%, rgba(131,173,26,1)), color-stop(68%, rgba(160,190,28,1)), color-stop(100%, rgba(177,196,30,1)));
 							background: -webkit-linear-gradient(left, rgba(114,170,25,1) 0%, rgba(125,174,26,1) 19%, rgba(131,173,26,1) 34%, rgba(160,190,28,1) 68%, rgba(177,196,30,1) 100%);
@@ -107,7 +107,7 @@ page-shop {
 						}
 					}
 					img{
-						width:100%;
+						width:85%;
 					}
 				}
 			}
@@ -123,8 +123,8 @@ page-shop {
 	.express{
 	width: 30px;
 	}
-	.profbtn{
-		
+	.profimg{
+		width: 20px;
 	}
 	
 }
